--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-horizontal-datepicker": "^2.0.3",
+    "react-horizontal-strip-datepicker": "^3.0.2",
     "react-icon": "^1.0.0",
     "react-icons": "^5.1.0",
     "react-router": "^6.22.3",
