--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "react": "^18.2.0",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-horizontal-datepicker": "^2.0.3",
     "react-horizontal-strip-datepicker": "^3.0.2",
